# Trust-Evaluator-microservice

./: .env.TEMPLATE  README.md  docker-compose.yml  main.py  pyproject.toml  test1feature.ipynb  test2features.ipynb  tests.ipynb
app/models/: attributes.py  query_application_provider.graphql  query_resource_capacity.graphql  query_resource_provider.graphql  schemas.py  sql_models.py  stakeholder.py
app/trust_evaluation/: endpoints.py  probabilistic.py  trust_evaluator.py
app/utils/: database.py  helpers.py  settings.py
models/: attributes.py  query_resource_capacity.graphql  stakeholder.py
project/: main.py
project/models/: attributes.py  did.py  stakeholder.py  stochastic.py  trust_evaluator.py
project/trust_evaluation/: trust_evaluator.py
project/utils/: config.py  helpers.py
tests/: tests.ipynb
trust_evaluation/: stochastic.py  trust_evaluator.py
trust_management_system/: main.py
trust_management_system/models/: attributes.py  did.py
utils/: helpers.py  settings.py
