[project]
name = "trust-evaluator"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pydantic-settings (>=2.9.0,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
